# cmonitor-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CLAUDE.md  architecture-notes.md  parity-inventory.md
npm/: install.js  package.json
plans/: complete-rust-rewrite-parity-plan.md  m1-bootstrap-and-contract-harness.md  review-regressions-fix-plan.md
src/: CLAUDE.md  lib.rs  main.rs
src/analysis/: CLAUDE.md  blocks.rs  limits.rs  mod.rs  p90.rs
src/compat/: CLAUDE.md  mod.rs  terminal_policy.rs  upstream.rs
src/config/: CLAUDE.md  mod.rs
src/discovery/: CLAUDE.md  jsonl_files.rs  mod.rs  roots.rs
src/domain/: CLAUDE.md  mod.rs  plan.rs  pricing.rs  session_block.rs  usage_entry.rs
src/parser/: CLAUDE.md  entries.rs  jsonl.rs  mod.rs
src/report/: CLAUDE.md  daily_monthly.rs  mod.rs  model.rs
src/runtime/: CLAUDE.md  mod.rs  orchestrator.rs  realtime.rs  table_mode.rs  terminal.rs  theme.rs
src/ui/: CLAUDE.md  mod.rs  realtime.rs  session.rs  sparkline.rs  summary.rs  table.rs  timezone.rs
tests/: CLAUDE.md  parity_analysis.rs  parity_cli.rs  parity_ingest.rs  parity_realtime.rs  parity_tables.rs
tests/fixtures/analysis/: CLAUDE.md  README.md
tests/fixtures/contract/: CLAUDE.md  README.md
tests/fixtures/contract/defaults/home/.claude-monitor/: last_used.json
tests/fixtures/ingest/: CLAUDE.md  README.md  mixed-events.jsonl
tests/fixtures/ingest/sample-home/alpha/project/: session-b.jsonl
tests/fixtures/ingest/sample-home/alpha/project/nested/: session-a.jsonl
tests/fixtures/ingest/sample-home/beta/another/: session-c.jsonl
tests/fixtures/realtime/: CLAUDE.md  README.md
tests/fixtures/tables/: CLAUDE.md  README.md
tests/snapshots/: parity_cli__cli-clear.snap  parity_cli__cli-defaults.snap  parity_cli__cli-overrides.snap  parity_cli__cli-version.snap  parity_realtime__realtime-render.snap  parity_tables__daily-table.snap  parity_tables__monthly-table.snap
tests/support/: CLAUDE.md  fetch_upstream_oracle.py  oracle_runner.py
