[package]
name = "cmonitor-rs"
version = "0.1.0"
edition = "2024"
description = "Rust rewrite scaffold for Claude Code Usage Monitor"
license = "MIT"
repository = "https://github.com/Psysician/cmonitor-rs"
homepage = "https://github.com/Psysician/cmonitor-rs"
readme = "README.md"
rust-version = "1.93"
keywords = ["claude", "monitor", "terminal", "usage", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
