# The single-crate rewrite keeps behavior seams explicit while parity coverage grows. (ref: DL-002)
# The vendored oracle stays reproducible and auditable on every checkout. (ref: DL-006)
#
# Dependency substitutions from the original plan (ref: DL-002):
# - camino, directories, walkdir -> std::path + std::fs (sufficient for flat discovery)
# - toml -> not needed (config is JSON-based last_used.json)
# - tracing, tracing-subscriber -> deferred (logging flags accepted for CLI parity but not wired)
# - assert_cmd, assert_fs, predicates, tempfile -> std::process::Command + std::fs (fewer test deps)

[package]
name = "cmonitor-rs"
version = "0.1.0"
edition = "2024"
description = "Rust rewrite of Claude Code Usage Monitor with oracle-backed parity harness"
license = "MIT"
repository = "https://github.com/Psysician/cmonitor-rs"
homepage = "https://github.com/Psysician/cmonitor-rs"
readme = "README.md"
rust-version = "1.93"
default-run = "cmonitor-rs"
keywords = ["claude", "monitor", "terminal", "usage", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "cmonitor_rs"
path = "src/lib.rs"

[[bin]]
name = "cmonitor-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
# Named-region grouping needs chrono-tz, while time continues to own the CLI
# timestamp surface and fixed-offset formatting. (ref: DL-003, DL-006)
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
# Safe cross-platform SIGINT handling without unsafe FFI. (ref: DL-007)
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }

[dev-dependencies]
insta = { version = "1.42", features = ["json", "redactions"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
